--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -62,9 +62,9 @@
                 <p>Crotrole-caixas</p>
             </a>
 
-         <a href="listar_tabelas.html" class="card">
+         <a href="crud.html" class="card">
                 <i class="fas fa-users"></i>
-                <h3>Listar_tabelas</h3>
+                <h3>crud</h3>
             
             </a>
          
