--- a/projeto/erp/bloco_de_notas.html
+++ b/projeto/erp/bloco_de_notas.html
@@ -48,6 +48,13 @@
 
 
     
+<div id="notes-list"></div>
+</div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+<script src="js/bloco_de_notas.js"></script>
+</body>
+</html>
 </body>
 </html>
