--- a/projeto/erp/bloco_de_notas.html
+++ b/projeto/erp/bloco_de_notas.html
@@ -5,10 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloco de Notas - ERP ABP</title>
     
-    <script src="js/conexao.js"></script>
+    <script src="conexao.js"></script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/bloco_de_notas.css">
+    <style>
+        :root {
+    --primary: #3ecf8e;
+    --dark: #0f172a;
+    --bg: #f1f5f9;
+}
+
+* { box-sizing: border-box; }
+
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: var(--bg);
+}
+
+.container {
+    max-width: 700px;
+    margin: 40px auto;
+    background: white;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+}
+
+textarea, input[type="text"] {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+.btn-save {
+    background: var(--primary);
+    color: white;
+    padding: 15px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    font-weight: bold;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: 0.3s;
+}
+
+.btn-save:hover { filter: brightness(1.1); }
+
+.note {
+    border-bottom: 1px solid #f1f1f1;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.note-content strong {
+    color: #1e293b;
+    font-size: 1.1em;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.note-content p {
+    color: #64748b;
+    margin: 0;
+    line-height: 1.5;
+    white-space: pre-wrap;
+}
+
+.actions {
+    display: flex;
+    gap: 8px;
+}
+
+.actions button {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    color: white;
+}
+
+.search-box {
+    margin-top: 30px;
+    border-top: 1px solid #eee;
+    padding-top: 20px;
+}
+
+.export-btn {
+    width: 100%;
+    background: #2c3e50;
+    color: white;
+    border: none;
+    padding: 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-weight: bold;
+}
+    <style>
 </head>
 <body>
 
@@ -34,6 +134,127 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="js/bloco_de_notas.js"></script>
+    <script>
+        /**
+ * js/bloco_de_notas.js - Versão Corrigida para Sincronismo
+ */
+
+let allNotes = [];
+
+// Função para garantir que o _supabase foi definido pelo conexao.js
+async function waitSupabase() {
+    let attempts = 0;
+    while (!window._supabase && attempts < 50) {
+        await new Promise(resolve => setTimeout(resolve, 100)); // Espera 100ms
+        attempts++;
+    }
+    if (window._supabase) {
+        loadNotes();
+    } else {
+        console.error("Supabase não carregou a tempo.");
+    }
+}
+
+async function loadNotes() {
+    try {
+        const { data: notes, error } = await _supabase
+            .from('notes')
+            .select('*')
+            .order('created_at', { ascending: false });
+
+        if (error) throw error;
+        allNotes = notes || [];
+        renderNotes(allNotes);
+    } catch (err) {
+        console.error("Erro ao carregar:", err.message);
+    }
+}
+
+function renderNotes(notes) {
+    const list = document.getElementById('notes-list');
+    if (!notes.length) {
+        list.innerHTML = '<p style="text-align:center;color:#94a3b8;margin-top:20px;">Nenhuma nota encontrada.</p>';
+        return;
+    }
+    list.innerHTML = notes.map(n => `
+        <div class="note">
+            <div class="note-content">
+                <strong>${n.title}</strong>
+                <p>${n.content}</p>
+            </div>
+            <div class="actions">
+                <button style="background:#f1c40f" onclick="prepareEdit('${n.id}')"><i class="fas fa-edit"></i></button>
+                <button style="background:#e74c3c" onclick="deleteNote('${n.id}')"><i class="fas fa-trash"></i></button>
+            </div>
+        </div>
+    `).join('');
+}
+
+async function saveNote() {
+    const id = document.getElementById('note-id').value;
+    const title = document.getElementById('title').value;
+    const content = document.getElementById('content').value;
+
+    if (!title || !content) return alert("Preencha tudo!");
+
+    const { data: { user } } = await _supabase.auth.getUser();
+
+    if (id) {
+        await _supabase.from('notes').update({ title, content }).eq('id', id);
+    } else {
+        await _supabase.from('notes').insert([{ title, content, user_id: user.id }]);
+    }
+
+    resetForm();
+    loadNotes();
+}
+
+function prepareEdit(id) {
+    const note = allNotes.find(n => n.id === id);
+    if (!note) return;
+    document.getElementById('note-id').value = note.id;
+    document.getElementById('title').value = note.title;
+    document.getElementById('content').value = note.content;
+    document.getElementById('btn-save').innerText = "Atualizar Nota";
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+}
+
+function resetForm() {
+    document.getElementById('note-id').value = '';
+    document.getElementById('title').value = '';
+    document.getElementById('content').value = '';
+    document.getElementById('btn-save').innerText = "Salvar Nota";
+}
+
+async function deleteNote(id) {
+    if (confirm("Excluir nota?")) {
+        await _supabase.from('notes').delete().eq('id', id);
+        loadNotes();
+    }
+}
+
+function filterNotes() {
+    const q = document.getElementById('search').value.toLowerCase();
+    renderNotes(allNotes.filter(n => n.title.toLowerCase().includes(q) || n.content.toLowerCase().includes(q)));
+}
+
+function exportAllToPDF() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    doc.text("Relatório de Notas - ERP ABP", 10, 10);
+    let y = 20;
+    allNotes.forEach((n, i) => {
+        doc.setFont(undefined, 'bold');
+        doc.text(`${i + 1}. ${n.title}`, 10, y);
+        doc.setFont(undefined, 'normal');
+        doc.text(n.content, 10, y + 7);
+        y += 25;
+    });
+    doc.save("notas.pdf");
+}
+
+// Inicialização segura
+document.addEventListener('DOMContentLoaded', waitSupabase);
+    </script>
 </body>
 </html>
