--- a/projeto/erp/financeiro.html
+++ b/projeto/erp/financeiro.html
@@ -159,7 +159,7 @@ td { padding: 12px 15px; border-top: 1px solid #f1f5f9; font-size: 14px; }
     </div>
 </div>
 
-<script">
+<script>
  /** ERP ABP - Módulo Financeiro **/
 (function() {
     "use strict";
