--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -135,6 +135,12 @@ body {
         <i class="fas fa-chart-line"></i> <h3>Financeiro</h3>
         <p>Fluxo de caixa e controle de contas.</p>
     </a>
+
+     <a href="testes.html" class="card">
+        <i class="fas fa-chart-line"></i> <h3>Testes</h3>
+        <p>Mesa de trabalho para mexer nos codigo, NÃO BAGUNCE SEU SISTEMA!.</p>
+    </a>
+     
 </div>
           
 
