--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -118,7 +118,7 @@ body {
 
      <a href="testes.html" class="card">
         <i class="fas fa-chart-line"></i> <h3>mesa de Testes</h3>
-        <p>Mesa de trabalho para mexer nos codigo, NÃO BAGUNCE SEU SISTEMA!.</p>
+        <p>NÃO BAGUNCE SEU SISTEMA! salve os codigos no BLOCO DE NOTAS</p>
     </a>
     
   
