--- a/projeto/erp/crude_universal.html
+++ b/projeto/erp/crude_universal.html
@@ -6,7 +6,7 @@
     <title>ERP ABP - CRUD Universal</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="conexao.js"></script> 
+    <script src="js/conexao.js"></script> 
 </head>
 <body>
     
