--- a/projeto/erp/bloco_de_notas.html
+++ b/projeto/erp/bloco_de_notas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloco de Notas - ERP ABP</title>
     
-    <script src="conexao.js"></script>
+    <script src="js/conexao.js"></script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
