--- a/projeto/erp/produtos.html
+++ b/projeto/erp/produtos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - ERP ABP</title>
-    <script src="conexao.js"></script>
+    <script src="js/conexao_supabase.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
