--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -116,8 +116,8 @@ body {
          
  <div class="grid">
 
-     <a href="testes.html" class="card">
-        <i class="fas fa-chart-line"></i> <h3>Testes</h3>
+     <a href="crud_universal.html" class="card">
+        <i class="fas fa-chart-line"></i> <h3>crude universal</h3>
         <p>NÃO BAGUNCE SEU SISTEMA! salve os codigos no BLOCO DE NOTAS</p>
     </a>
     
