--- a/projeto/erp/entidades.html
+++ b/projeto/erp/entidades.html
@@ -115,6 +115,6 @@
 </div>
 
 <script src="js/conexao_supabase.js"></script>
-<script src="entidades.js"></script>
+<script src="js/entidades_supabase.js"></script>
 </body>
 </html>
