--- a/projeto/erp/entidades.html
+++ b/projeto/erp/entidades.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestão de Entidades - ERP ABP</title>
     
-    <link rel="stylesheet" href="entidades.css">
+    <link rel="stylesheet" href="css/entidades.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
