--- a/index.html
+++ b/index.html
@@ -94,71 +94,14 @@
     </header>
 <!-- ################################################################################# -->
     <div class="project-grid">
-        <a href="projeto/meu_portfolio" class="card">
+        <a href="login.html" class="card">
             <i>📝</i>
-            <h2>Portifoli</h2>
-            <p>Site para portifólio</p>
-            <span class="btn">Acessar App</span>
-        </a>
-    </div>
-<!-- ################################################################################# -->
-<!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/erp/index.html" class="card">
-            <i>📝</i>
-            <h2>SISTEMA ERP ABP</h2>
-            <p>Aplicação full-stack com autenticação e banco de dados via Supabase.(em desenvolvimento)</p>
-            <span class="btn">Acessar App</span>
-        </a>
-    </div>
-<!-- ################################################################################# -->
-<!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/tapioca/index.html" class="card">
-            <i>📝</i>
-            <h2>Cardapio Eletrônico</h2>
-            <p>Barraca de tapioca</p>
-            <span class="btn">Acessar App</span>
-        </a>
-    </div>
-<!-- ################################################################################# -->
-<!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/loja/index.html" class="card">
-            <i>📝</i>
-            <h2>e-commerce</h2>
-            <p>Aplicação full-stack para loja virtual</p>
+            <h2>login</h2>
+         
             <span class="btn">Acessar App</span>
         </a>
     </div>
 <!-- ################################################################################# -->
 
-<!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/editortxt" class="card">
-            <i>📝</i>
-            <h2>editortxt</h2>
-            <span class="btn">Acessar App</span>
-        </a>
-    </div>
-<!-- ################################################################################# --> 
-<!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/anaminesia" class="card">
-            <i>📝</i>
-            <h2>fixa-anaminesia</h2>
-            <span class="btn">Acessar App</span>
-        </a>
-    </div>
-<!-- ################################################################################# --> 
-<!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/entregas" class="card">
-            <i>📝</i>
-            <h2>controle de entregas</h2>
-            <span class="btn">Em produção</span>
-        </a>
-    </div>
-<!-- ################################################################################# --> 
 </body>
 </html>
