--- a/login.html
+++ b/login.html
@@ -118,9 +118,21 @@
             <div id="error-msg"></div>
         </form>
     </div>
-
-    <script src="js/core/conexao.js"></script>
+<div style="text-align: center; margin-top: 1.5rem; font-size: 0.9rem; color: var(--gray);">
+    Ainda não tem uma conta? 
+    <a href="#" id="btn-registrar" style="color: var(--primary); text-decoration: none; font-weight: 600;">Cadastre sua Empresa</a>
+</div>
+   <script src="js/core/conexao.js"></script>
     <script src="js/core/auth.js"></script>
+<script>
+    // Lógica para o link de registro
+    document.getElementById('btn-registrar').addEventListener('click', (e) => {
+        e.preventDefault();
+        alert('Redirecionando para a página de Planos e Cadastro...');
+        // Futuramente: window.location.href = 'cadastro.html';
+    });
+</script>
+ 
 
     <script>
         (function() {
