--- a/dashboard.html
+++ b/dashboard.html
@@ -2,92 +2,39 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | ERP ABP Profissional</title>
-    
+    <title>Dashboard | ERP ABP</title>
     <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
     <script src="js/core/conexao.js"></script>
     <script src="js/core/auth.js"></script>
-    <script src="js/core/sync.js"></script>
-
     <style>
-        :root { --primary: #2563eb; --success: #10b981; --dark: #1e293b; --bg: #f1f5f9; }
-        body { font-family: 'Inter', sans-serif; background-color: var(--bg); margin: 0; }
-        nav { background: var(--dark); color: white; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; }
-        .status-online { color: var(--success); font-weight: bold; }
-        .status-offline { color: #f59e0b; font-weight: bold; }
+        body { font-family: sans-serif; background: #f1f5f9; margin: 0; }
+        nav { background: #1e293b; color: white; padding: 1rem; display: flex; justify-content: space-between; }
         .container { padding: 2rem; }
-        .card { background: white; padding: 1.5rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
+        .card { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     </style>
 </head>
 <body>
     <nav>
-        <div><strong>ERP ABP</strong></div>
+        <span><strong>ERP ABP Profissional</strong></span>
         <div>
-            <span id="connection-status">Verificando...</span> | 
-            <span id="user-name">Usuário</span> | 
-            <a href="#" onclick="AppAuth.logout()" style="color: white;">Sair</a>
+            <span id="user-display">Carregando...</span> | 
+            <a href="#" onclick="AppAuth.logout()" style="color:white">Sair</a>
         </div>
     </nav>
-
     <div class="container">
         <div class="card">
-            <h2>Bem-vindo ao Dashboard</h2>
-            <div id="estoque-alerta" style="display:none; color: red; margin-bottom: 1rem;">
-                ⚠️ Atenção: Existem produtos com estoque crítico!
-            </div>
-            <p>Dados sincronizados do banco local (Offline-first).</p>
+            <h1>Olá, <span id="user-welcome">Usuário</span>!</h1>
+            <p>Seu sistema está online e sincronizado.</p>
         </div>
     </div>
-
     <script>
-        (function() {
-            const Dashboard = {
-                init: async function() {
-                    this.atualizarInterface();
-                    this.ouvirConexao();
-                    this.carregarDados();
-                },
-
-                atualizarInterface: function() {
-                    const user = window.AppAuth.user;
-                    if (user) {
-                        document.getElementById('user-name').innerText = user.nome || user.email;
-                    }
-                },
-
-                ouvirConexao: function() {
-                    const statusEl = document.getElementById('connection-status');
-                    const atualizar = (online) => {
-                        statusEl.innerText = online ? '🌐 Online' : '📵 Offline';
-                        statusEl.className = online ? 'status-online' : 'status-offline';
-                    };
-                    atualizar(window.isOnline);
-                    document.addEventListener('statusConexao', (e) => atualizar(e.detail.online));
-                },
-
-                carregarDados: async function() {
-                    try {
-                        // Busca estoque crítico no banco local (IndexedDB)
-                        const produtosCriticos = await window.dbLocal.produtos
-                            .filter(p => p.estoque <= p.estoque_minimo)
-                            .toArray();
-
-                        if (produtosCriticos.length > 0) {
-                            document.getElementById('estoque-alerta').style.display = 'block';
-                        }
-                    } catch (err) {
-                        console.error("Erro ao carregar dados do dashboard:", err);
-                    }
-                }
-            };
-
-            // Inicia o dashboard
-            Dashboard.init();
-        })();
+        window.onload = () => {
+            if(AppAuth.user) {
+                document.getElementById('user-display').innerText = AppAuth.user.email;
+                document.getElementById('user-welcome').innerText = AppAuth.user.nome;
+            }
+        };
     </script>
 </body>
 </html>
