--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       margin-top: 1rem;
       transition: background 0.2s;
     }
-    button:hover {
+    button:hover:not(:disabled) {
       background: #2980b9;
     }
     button:disabled {
@@ -88,6 +88,7 @@
       margin-top: 1.2rem;
       text-align: center;
       font-weight: 500;
+      min-height: 1.5em;
     }
     .success { color: #27ae60; }
     .error   { color: #e74c3c; }
@@ -128,70 +129,79 @@
 </div>
 
 <script>
-  // Configuração do Supabase (substitua se mudar o projeto)
+  // Configuração Supabase (global, sem redeclaração)
   const supabaseUrl = 'https://ueaprmzmlkfrbmibdnro.supabase.co';
   const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlYXBybXptbGtmcmJtaWJkbnJvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzNTg3OTQsImV4cCI6MjA4NDkzNDc5NH0.Nl_W2v3JN_uQLfz4eAqV3goDVFernnGi2A7L9kszX3w';
 
+  // Cria o cliente uma única vez
   const supabase = Supabase.createClient(supabaseUrl, supabaseAnonKey);
 
   // Mostrar/esconder senha
   const togglePassword = document.getElementById('togglePassword');
   const passwordInput = document.getElementById('password');
 
-  togglePassword.addEventListener('click', () => {
-    const type = passwordInput.type === 'password' ? 'text' : 'password';
-    passwordInput.type = type;
-    togglePassword.textContent = type === 'password' ? '👁️' : '🙈';
-  });
+  if (togglePassword && passwordInput) {
+    togglePassword.addEventListener('click', () => {
+      const type = passwordInput.type === 'password' ? 'text' : 'password';
+      passwordInput.type = type;
+      togglePassword.textContent = type === 'password' ? '👁️' : '🙈';
+    });
+  }
 
   // Formulário de cadastro
-  document.getElementById('cadastroForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
+  const form = document.getElementById('cadastroForm');
+  const btn = document.getElementById('btnCadastrar');
+  const messageDiv = document.getElementById('message');
 
-    const email = document.getElementById('email').value.trim();
-    const password = document.getElementById('password').value;
-    const messageDiv = document.getElementById('message');
-    const btn = document.getElementById('btnCadastrar');
+  if (form) {
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
 
-    btn.disabled = true;
-    messageDiv.textContent = '';
-    messageDiv.className = '';
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
 
-    if (password.length < 6) {
-      messageDiv.textContent = 'A senha deve ter pelo menos 6 caracteres.';
-      messageDiv.className = 'error';
-      btn.disabled = false;
-      return;
-    }
+      btn.disabled = true;
+      messageDiv.textContent = 'Processando...';
+      messageDiv.className = '';
 
-    const { data, error } = await supabase.auth.signUp({
-      email,
-      password,
-      options: {
-        data: { nome: email.split('@')[0] } // opcional: metadados iniciais
+      if (!email || password.length < 6) {
+        messageDiv.textContent = 'Preencha email válido e senha com pelo menos 6 caracteres.';
+        messageDiv.className = 'error';
+        btn.disabled = false;
+        return;
+      }
+
+      try {
+        const { data, error } = await supabase.auth.signUp({
+          email,
+          password,
+          options: {
+            data: { nome: email.split('@')[0] }
+          }
+        });
+
+        if (error) throw error;
+
+        messageDiv.textContent = 'Cadastro realizado! Verifique seu email para confirmar (se necessário).';
+        messageDiv.className = 'success';
+
+        // Opcional: redireciona após 4 segundos
+        setTimeout(() => {
+          window.location.href = 'login.html'; // Crie essa página depois
+        }, 4000);
+      } catch (err) {
+        messageDiv.textContent = err.message.includes('already registered')
+          ? 'Este email já está cadastrado.'
+          : 'Erro: ' + err.message;
+        messageDiv.className = 'error';
+      } finally {
+        btn.disabled = false;
       }
     });
+  }
 
-    if (error) {
-      messageDiv.textContent = error.message.includes('already registered')
-        ? 'Este email já está cadastrado.'
-        : 'Erro ao cadastrar: ' + error.message;
-      messageDiv.className = 'error';
-    } else {
-      messageDiv.textContent = 'Cadastro realizado! Verifique seu email para confirmar (se ativado).';
-      messageDiv.className = 'success';
-
-      // Opcional: redireciona para login após 3 segundos
-      setTimeout(() => {
-        window.location.href = 'login.html'; // crie essa página depois
-      }, 4000);
-    }
-
-    btn.disabled = false;
-  });
-
-  // Link para login (crie login.html depois)
-  document.getElementById('goToLogin').addEventListener('click', () => {
+  // Link para login
+  document.getElementById('goToLogin')?.addEventListener('click', () => {
     window.location.href = 'login.html';
   });
 </script>
